fix: header z-index

--- a/public/sass/blocks/header.scss
+++ b/public/sass/blocks/header.scss
@@ -11,7 +11,7 @@
   backdrop-filter: blur(1vw);
   -webkit-backdrop-filter: blur(1vw);
   overflow: hidden;
-  z-index: 0;
+  z-index: 1;
 
   @include vp-1023 {
     position: fixed;
@@ -25,8 +25,12 @@
     transition: background-color $trans-default;
   }
 
+  &--zindex {
+    z-index: 0;
+  }
+
   &--opened {
-    z-index: 1;
+    z-index: 2;
 
     @include vp-1023 {
       border-radius: 0 0 20px 20px;
